--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/s3-request-presigner": "^3.682.0",
+    "aws-sdk": "^2.1691.0",
+    "mssql": "^11.0.1",
+    "next": "^15.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
